# attendance-service-api

./: pyproject.toml
src/app/: main.py
src/app/core/config/: scalar_config.py  settings.py
src/app/core/db/: database.py
src/app/core/db/decorator/: __init__.py  query_decorator.py  transactional_decorator.py
src/app/core/db/dependencies/: __init__.py  async_session_dependency.py
src/app/core/exception/: __init__.py  bad_request_exception.py  conflict_exception.py  database_exception.py  forbidden_exception.py  invalid_field_exception.py  not_found_exception.py  server_exception.py  unauthorized_exception.py
src/app/core/exception/constants/: __init__.py  error_titles_types.py  error_types.py
src/app/core/exception/decorator/: __init__.py  controller_handle_exception.py  service_handle_exception.py
src/app/core/exception/globals/: __init__.py  global_exception_handler.py
src/app/core/exception/model/: __init__.py  base_exception.py  error_detail.py
src/app/core/model/: __init__.py  message_response.py  page.py  pageable.py  pagination.py
src/app/core/repository/: __init__.py
src/app/core/repository/enum/: __init__.py  join_enum.py
src/app/core/repository/helpers/: __init__.py  repository_helpers.py
src/app/core/repository/implementation/: __init__.py  generic_repository_impl.py
src/app/core/repository/interface/: __init__.py  base_repository_interface.py
src/app/domain/classrooms/controller/: __init__.py  grade_controller.py  section_controller.py
src/app/domain/classrooms/model/: __init__.py  grade.py  section.py
(+23 files in other folders)
