[project]
name = "attendance-service-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.5",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "pendulum>=3.1.0",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "reportlab>=4.4.3",
    "scalar-fastapi>=1.3.0",
    "sqlmodel>=0.0.24",
]
[tool.ruff]
ignore = ["FAST001"]
